--- a/package.json
+++ b/package.json
@@ -8,6 +8,15 @@
   },
 
   "dependencies": {
+    "htmlparser": "~1.7.7",
     "underscore": "~1.8.2"
+  },
+
+  "devDependencies": {
+    "chai": "~2.1.1",
+    "grunt": "~0.4.5",
+    "jshint": "~2.6.3",
+    "mocha": "~2.2.1",
+    "q": "~2.0.3"
   }
 }
