--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "node-jsp",
   "description": "A simple parser and view engine for JSP",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/DanielSchaffer/node-jsp.git"
   },
+
+  "main": "./src/parser",
 
   "dependencies": {
     "htmlparser": "~1.7.7",
