--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 
   "dependencies": {
     "htmlparser": "~1.7.7",
-    "q": "~2.0.3",
-    "underscore": "~1.8.2"
+    "underscore": "~1.8.2",
+    "when": "^3.7.3"
   },
 
   "devDependencies": {
